// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessHours component should render default values 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Business hours"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <p>
      Let customers know when your team is online.
      <br />
      This way, you can set different auto-responders in the rules based on when your team is working.
    </p>
    <p>
      The appearance of your
       
      <Link
        to="/app/settings/integrations/gorgias_chat"
      >
        Chat integrations
      </Link>
       
      will change when outside business hours.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          md="9"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-3"
          >
            <Label
              className="control-label businessHoursLabel"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Business hours
            </Label>
            <div
              className="businessHoursInputWrapper"
              key="0"
            >
              <BusinessHoursForm
                businessHour={
                  Immutable.Map {
                    "days": "1,2,3,4,5",
                    "from_time": "09:00",
                    "to_time": "17:00",
                  }
                }
                onChange={[Function]}
              />
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <i
                  className="material-icons red"
                >
                  clear
                </i>
              </div>
            </div>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              <i
                className="material-icons"
              >
                add
              </i>
               
              Add business hours
            </Button>
          </div>
          <InputField
            label="Timezone"
            name="timezone"
            onChange={[Function]}
            type="select"
            value="UTC"
          >
            <option
              key="UTC"
              value="UTC"
            >
              UTC
            </option>
            <option
              key="US/Pacific"
              value="US/Pacific"
            >
              US/Pacific
            </option>
            <option
              key="Australia/AUR"
              value="Australia/AUR"
            >
              Australia/AUR
            </option>
          </InputField>
        </Col>
      </Row>
      <Button
        className=""
        color="success"
        disabled={false}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;

exports[`BusinessHours component should render values from state 1`] = `
<Connect(BusinessHours)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BusinessHours
    businessHoursSettings={
      Immutable.Map {
        "type": "business-hours",
        "data": Immutable.Map {
          "business_hours": Immutable.List [
            Immutable.Map {
              "days": "2",
              "from_time": "10:00",
              "to_time": "17:00",
            },
            Immutable.Map {
              "days": "4",
              "from_time": "11:00",
              "to_time": "17:00",
            },
          ],
          "timezone": "US/Pacific",
        },
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    submitSetting={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title="Business hours"
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header"
        >
          <h1
            className="d-flex align-items-center"
          >
            Business hours
          </h1>
        </div>
      </PageHeader>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <p>
            Let customers know when your team is online.
            <br />
            This way, you can set different auto-responders in the rules based on when your team is working.
          </p>
          <p>
            The appearance of your
             
            <Link
              to="/app/settings/integrations/gorgias_chat"
            >
              <a
                to="/app/settings/integrations/gorgias_chat"
              >
                Chat integrations
              </a>
            </Link>
             
            will change when outside business hours.
          </p>
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <form
              className=""
              onSubmit={[Function]}
            >
              <Row
                className="mb-2"
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="mb-2 row"
                >
                  <Col
                    md="9"
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col-md-9"
                    >
                      <div
                        className="mb-3"
                      >
                        <Label
                          className="control-label businessHoursLabel"
                          tag="label"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <label
                            className="control-label businessHoursLabel"
                          >
                            Business hours
                          </label>
                        </Label>
                        <div
                          className="businessHoursInputWrapper"
                          key="0"
                        >
                          <BusinessHoursForm
                            businessHour={
                              Immutable.Map {
                                "days": "2",
                                "from_time": "10:00",
                                "to_time": "17:00",
                              }
                            }
                            onChange={[Function]}
                          >
                            <div
                              className="businessHoursInput"
                            >
                              <SelectField
                                allowCustomValue={false}
                                fixedWidth={true}
                                fullWidth={false}
                                onChange={[Function]}
                                onSearchChange={[Function]}
                                options={
                                  Array [
                                    Object {
                                      "label": <i>
                                        Everyday
                                      </i>,
                                      "text": "Everyday",
                                      "value": "1,2,3,4,5,6,7",
                                    },
                                    Object {
                                      "label": <i>
                                        Weekdays
                                      </i>,
                                      "text": "Weekdays",
                                      "value": "1,2,3,4,5",
                                    },
                                    Object {
                                      "label": <i>
                                        Weekend
                                      </i>,
                                      "text": "Weekend",
                                      "value": "6,7",
                                    },
                                    Object {
                                      "label": "Monday",
                                      "value": "1",
                                    },
                                    Object {
                                      "label": "Tuesday",
                                      "value": "2",
                                    },
                                    Object {
                                      "label": "Wednesday",
                                      "value": "3",
                                    },
                                    Object {
                                      "label": "Thursday",
                                      "value": "4",
                                    },
                                    Object {
                                      "label": "Friday",
                                      "value": "5",
                                    },
                                    Object {
                                      "label": "Saturday",
                                      "value": "6",
                                    },
                                    Object {
                                      "label": "Sunday",
                                      "value": "7",
                                    },
                                  ]
                                }
                                placeholder="Select an option"
                                singular="option"
                                style={Object {}}
                                value="2"
                              >
                                <div
                                  style={Object {}}
                                >
                                  <UncontrolledDropdown
                                    isOpen={false}
                                    toggle={[Function]}
                                  >
                                    <Dropdown
                                      a11y={true}
                                      active={false}
                                      addonType={false}
                                      direction="down"
                                      inNavbar={false}
                                      isOpen={false}
                                      nav={false}
                                      setActiveFromChild={false}
                                      toggle={[Function]}
                                    >
                                      <Manager>
                                        <div
                                          className="dropdown"
                                          onKeyDown={[Function]}
                                        >
                                          <DropdownToggle
                                            aria-haspopup={true}
                                            color="secondary"
                                            data-toggle="dropdown"
                                            tag="div"
                                          >
                                            <Reference>
                                              <InnerReference
                                                setReferenceNode={[Function]}
                                              >
                                                <div
                                                  aria-expanded={false}
                                                  aria-haspopup={true}
                                                  className=""
                                                  data-toggle="dropdown"
                                                  onClick={[Function]}
                                                >
                                                  <div
                                                    className="select dropdown-toggle"
                                                    onClick={[Function]}
                                                  >
                                                    <span
                                                      className="label"
                                                      style={
                                                        Object {
                                                          "minWidth": 82,
                                                          "opacity": 1,
                                                        }
                                                      }
                                                    >
                                                      Tuesday
                                                    </span>
                                                    <input
                                                      className="input"
                                                      onBlur={[Function]}
                                                      onChange={[Function]}
                                                      onFocus={[Function]}
                                                      onKeyDown={[Function]}
                                                      style={
                                                        Object {
                                                          "minWidth": 82,
                                                        }
                                                      }
                                                      type="text"
                                                      value=""
                                                    />
                                                  </div>
                                                </div>
                                              </InnerReference>
                                            </Reference>
                                          </DropdownToggle>
                                          <DropdownMenu
                                            className="options"
                                            flip={true}
                                            tag="div"
                                          >
                                            <div
                                              aria-hidden={true}
                                              className="options dropdown-menu"
                                              role="menu"
                                              tabIndex="-1"
                                            >
                                              <DropdownItem
                                                className="option option--focused"
                                                key="1,2,3,4,5,6,7"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option option--focused dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <i>
                                                    Everyday
                                                  </i>
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="1,2,3,4,5"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <i>
                                                    Weekdays
                                                  </i>
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="6,7"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <i>
                                                    Weekend
                                                  </i>
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="1"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Monday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="3"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Wednesday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="4"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Thursday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="5"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Friday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="6"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Saturday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="7"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Sunday
                                                </button>
                                              </DropdownItem>
                                            </div>
                                          </DropdownMenu>
                                        </div>
                                      </Manager>
                                    </Dropdown>
                                  </UncontrolledDropdown>
                                </div>
                              </SelectField>
                              <Input
                                className="timeField"
                                name="fromTime"
                                onChange={[Function]}
                                pattern="[0-9][0-9]:[0-9][0-9]"
                                type="time"
                                value="10:00"
                              >
                                <input
                                  className="timeField form-control"
                                  name="fromTime"
                                  onChange={[Function]}
                                  pattern="[0-9][0-9]:[0-9][0-9]"
                                  type="time"
                                  value="10:00"
                                />
                              </Input>
                              <p>
                                to
                              </p>
                              <Input
                                className="timeField"
                                name="toTime"
                                onChange={[Function]}
                                pattern="[0-9][0-9]:[0-9][0-9]"
                                type="time"
                                value="17:00"
                              >
                                <input
                                  className="timeField form-control"
                                  name="toTime"
                                  onChange={[Function]}
                                  pattern="[0-9][0-9]:[0-9][0-9]"
                                  type="time"
                                  value="17:00"
                                />
                              </Input>
                            </div>
                          </BusinessHoursForm>
                          <div
                            className="deleteButton"
                            onClick={[Function]}
                          >
                            <i
                              className="material-icons red"
                            >
                              clear
                            </i>
                          </div>
                        </div>
                        <div
                          className="businessHoursInputWrapper"
                          key="1"
                        >
                          <BusinessHoursForm
                            businessHour={
                              Immutable.Map {
                                "days": "4",
                                "from_time": "11:00",
                                "to_time": "17:00",
                              }
                            }
                            onChange={[Function]}
                          >
                            <div
                              className="businessHoursInput"
                            >
                              <SelectField
                                allowCustomValue={false}
                                fixedWidth={true}
                                fullWidth={false}
                                onChange={[Function]}
                                onSearchChange={[Function]}
                                options={
                                  Array [
                                    Object {
                                      "label": <i>
                                        Everyday
                                      </i>,
                                      "text": "Everyday",
                                      "value": "1,2,3,4,5,6,7",
                                    },
                                    Object {
                                      "label": <i>
                                        Weekdays
                                      </i>,
                                      "text": "Weekdays",
                                      "value": "1,2,3,4,5",
                                    },
                                    Object {
                                      "label": <i>
                                        Weekend
                                      </i>,
                                      "text": "Weekend",
                                      "value": "6,7",
                                    },
                                    Object {
                                      "label": "Monday",
                                      "value": "1",
                                    },
                                    Object {
                                      "label": "Tuesday",
                                      "value": "2",
                                    },
                                    Object {
                                      "label": "Wednesday",
                                      "value": "3",
                                    },
                                    Object {
                                      "label": "Thursday",
                                      "value": "4",
                                    },
                                    Object {
                                      "label": "Friday",
                                      "value": "5",
                                    },
                                    Object {
                                      "label": "Saturday",
                                      "value": "6",
                                    },
                                    Object {
                                      "label": "Sunday",
                                      "value": "7",
                                    },
                                  ]
                                }
                                placeholder="Select an option"
                                singular="option"
                                style={Object {}}
                                value="4"
                              >
                                <div
                                  style={Object {}}
                                >
                                  <UncontrolledDropdown
                                    isOpen={false}
                                    toggle={[Function]}
                                  >
                                    <Dropdown
                                      a11y={true}
                                      active={false}
                                      addonType={false}
                                      direction="down"
                                      inNavbar={false}
                                      isOpen={false}
                                      nav={false}
                                      setActiveFromChild={false}
                                      toggle={[Function]}
                                    >
                                      <Manager>
                                        <div
                                          className="dropdown"
                                          onKeyDown={[Function]}
                                        >
                                          <DropdownToggle
                                            aria-haspopup={true}
                                            color="secondary"
                                            data-toggle="dropdown"
                                            tag="div"
                                          >
                                            <Reference>
                                              <InnerReference
                                                setReferenceNode={[Function]}
                                              >
                                                <div
                                                  aria-expanded={false}
                                                  aria-haspopup={true}
                                                  className=""
                                                  data-toggle="dropdown"
                                                  onClick={[Function]}
                                                >
                                                  <div
                                                    className="select dropdown-toggle"
                                                    onClick={[Function]}
                                                  >
                                                    <span
                                                      className="label"
                                                      style={
                                                        Object {
                                                          "minWidth": 82,
                                                          "opacity": 1,
                                                        }
                                                      }
                                                    >
                                                      Thursday
                                                    </span>
                                                    <input
                                                      className="input"
                                                      onBlur={[Function]}
                                                      onChange={[Function]}
                                                      onFocus={[Function]}
                                                      onKeyDown={[Function]}
                                                      style={
                                                        Object {
                                                          "minWidth": 82,
                                                        }
                                                      }
                                                      type="text"
                                                      value=""
                                                    />
                                                  </div>
                                                </div>
                                              </InnerReference>
                                            </Reference>
                                          </DropdownToggle>
                                          <DropdownMenu
                                            className="options"
                                            flip={true}
                                            tag="div"
                                          >
                                            <div
                                              aria-hidden={true}
                                              className="options dropdown-menu"
                                              role="menu"
                                              tabIndex="-1"
                                            >
                                              <DropdownItem
                                                className="option option--focused"
                                                key="1,2,3,4,5,6,7"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option option--focused dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <i>
                                                    Everyday
                                                  </i>
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="1,2,3,4,5"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <i>
                                                    Weekdays
                                                  </i>
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="6,7"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <i>
                                                    Weekend
                                                  </i>
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="1"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Monday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="2"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Tuesday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="3"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Wednesday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="5"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Friday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="6"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Saturday
                                                </button>
                                              </DropdownItem>
                                              <DropdownItem
                                                className="option"
                                                key="7"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                tag="button"
                                                toggle={true}
                                                type="button"
                                              >
                                                <button
                                                  className="option dropdown-item"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  role="menuitem"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  Sunday
                                                </button>
                                              </DropdownItem>
                                            </div>
                                          </DropdownMenu>
                                        </div>
                                      </Manager>
                                    </Dropdown>
                                  </UncontrolledDropdown>
                                </div>
                              </SelectField>
                              <Input
                                className="timeField"
                                name="fromTime"
                                onChange={[Function]}
                                pattern="[0-9][0-9]:[0-9][0-9]"
                                type="time"
                                value="11:00"
                              >
                                <input
                                  className="timeField form-control"
                                  name="fromTime"
                                  onChange={[Function]}
                                  pattern="[0-9][0-9]:[0-9][0-9]"
                                  type="time"
                                  value="11:00"
                                />
                              </Input>
                              <p>
                                to
                              </p>
                              <Input
                                className="timeField"
                                name="toTime"
                                onChange={[Function]}
                                pattern="[0-9][0-9]:[0-9][0-9]"
                                type="time"
                                value="17:00"
                              >
                                <input
                                  className="timeField form-control"
                                  name="toTime"
                                  onChange={[Function]}
                                  pattern="[0-9][0-9]:[0-9][0-9]"
                                  type="time"
                                  value="17:00"
                                />
                              </Input>
                            </div>
                          </BusinessHoursForm>
                          <div
                            className="deleteButton"
                            onClick={[Function]}
                          >
                            <i
                              className="material-icons red"
                            >
                              clear
                            </i>
                          </div>
                        </div>
                        <Button
                          color="secondary"
                          onClick={[Function]}
                          tag="button"
                          type="button"
                        >
                          <button
                            aria-label={null}
                            className="btn btn-secondary"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="material-icons"
                            >
                              add
                            </i>
                             
                            Add business hours
                          </button>
                        </Button>
                      </div>
                      <InputField
                        label="Timezone"
                        name="timezone"
                        onChange={[Function]}
                        type="select"
                        value="US/Pacific"
                      >
                        <FormGroup
                          className="InputField"
                          color=""
                          tag="div"
                        >
                          <div
                            className="InputField form-group"
                            color=""
                          >
                            <Label
                              className="control-label"
                              htmlFor="id-timezone"
                              tag="label"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <label
                                className="control-label"
                                htmlFor="id-timezone"
                              >
                                Timezone
                              </label>
                            </Label>
                            <div
                              className=""
                            >
                              <Input
                                className=""
                                id="id-timezone"
                                onChange={[Function]}
                                type="select"
                                value="US/Pacific"
                              >
                                <select
                                  className="form-control"
                                  id="id-timezone"
                                  onChange={[Function]}
                                  value="US/Pacific"
                                >
                                  <option
                                    key="UTC"
                                    value="UTC"
                                  >
                                    UTC
                                  </option>
                                  <option
                                    key="US/Pacific"
                                    value="US/Pacific"
                                  >
                                    US/Pacific
                                  </option>
                                  <option
                                    key="Australia/AUR"
                                    value="Australia/AUR"
                                  >
                                    Australia/AUR
                                  </option>
                                </select>
                              </Input>
                            </div>
                          </div>
                        </FormGroup>
                      </InputField>
                    </div>
                  </Col>
                </div>
              </Row>
              <Button
                className=""
                color="success"
                disabled={false}
                tag="button"
                type="submit"
              >
                <button
                  aria-label={null}
                  className="btn btn-success"
                  disabled={false}
                  onClick={[Function]}
                  type="submit"
                >
                  Save changes
                </button>
              </Button>
            </form>
          </Form>
        </div>
      </Container>
    </div>
  </BusinessHours>
</Connect(BusinessHours)>
`;
